# mol-active-learn-lite

./: README.md  pyproject.toml
mol-active-learn-lite/: README.md  pyproject.toml
mol-active-learn-lite/configs/al/: default.yaml
mol-active-learn-lite/configs/data/: esol.yaml
mol-active-learn-lite/configs/model/: ensemble_mlp.yaml
mol-active-learn-lite/configs/train/: default.yaml
mol-active-learn-lite/scripts/: active_learn.py  download_data.py  evaluate.py  propose.py  train.py
mol-active-learn-lite/src/mol_active/: __init__.py  evaluation.py  proposer.py  utils.py
src/mol_active/: __init__.py  active_learning.py  cli.py  data.py  data_processing.py  features.py  features_rdkit.py  logging.py  schemas.py  utils.py
src/mol_active/models/: __init__.py  ensemble.py  lightning_module.py  mc_dropout.py
tests/: __init__.py  test_cli.py  test_schemas.py
